--- a/css/index.css
+++ b/css/index.css
@@ -251,11 +251,14 @@ main {
 
 
 
-/* MOBILE VERSION */
+/* MOBILE PHONES (PORTRAIT) */
 @media only screen and (max-width: 600px) {
 
   /* MAIN SECTION */
-  
+  .index-main-text {
+    margin-bottom: 120px;
+  }
+
   .index-main-text-slogan {
     font-size: 4.8rem;
     line-height: 0.85;
@@ -355,7 +358,7 @@ main {
     max-height: 80%;
   }
 
-  /* SERVICES SECTION */
+  /* OUR SERVICES SECTION */
   .index-services {
     width: 100%;
     height: 100%;
@@ -433,6 +436,215 @@ main {
     margin: 0 auto;
     margin-top: 16px;
     margin-bottom: 24px;
+  }
+
+  .index-services-note {
+    padding-top: 24px;
+  }
+
+  /* FAQ SECTION */
+  .index-faq {
+    padding-top: 24px;
+    padding-bottom: 0;
+  }
+
+  .index-faq h2 {
+    padding-bottom: 24px;
+    margin: 0 auto;
+  }
+
+}
+
+
+
+/* LARGER PHONES OR SMALL TABLETS (PORTRAIT) */
+@media only screen and (min-width: 601px) and (max-width: 768px) {
+
+  /* MAIN SECTION */
+  .index-main-text {
+    margin-bottom: 60px;
+  }
+
+  .index-main-text-slogan {
+    font-size: 8.4rem;
+    line-height: 0.85;
+    margin-left: 0px;
+    padding-left: 8px;
+  }
+  
+  .index-main-text-title {
+    font-size: 3.6rem;
+    line-height: 1.0;
+    margin-left: 0px;
+    padding-left: 8px;
+  }
+
+  /* OUR MISSION SECTION */
+  .index-our-mission {
+    width: 100%;
+  }
+
+  .index-our-mission-flex {
+    flex-direction: column;
+    row-gap: 20px;
+  }
+
+  .index-our-mission-img {
+    display: block;
+    width: 75%;
+  }
+
+  .index-our-mission-img img {
+    display: block;
+    width: 100%;
+    max-width: 250px;
+    padding: 0;
+    margin: 0 auto;
+  }
+  
+  .index-our-mission-text {
+    max-width: 100%;
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  .index-our-mission-text h2 {
+    text-align: center;
+  }
+
+  /* HOW IT WORKS SECTION */
+  .index-how-it-works {
+    width: 100%;
+    height: 100%;
+    padding: 24px 0;
+  }
+
+  .index-how-it-works-step-list {
+    height: 100%;
+    padding-top: 36px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .index-how-it-works-step-list li {
+    flex-basis: 100%;
+  }
+
+  .index-how-it-works-step-list-1 {
+    padding: 0;
+    border-left: none;
+    border-right: none;
+    padding-bottom: 60px;
+  }
+
+  .index-how-it-works-step-list-2 {
+    padding: 0;
+    border-left: none;
+    border-right: none;
+    padding-bottom: 60px;
+  }
+
+  .index-how-it-works-step-list-3 {
+    padding: 0;
+    border-left: none;
+    border-right: none;
+    padding-bottom: 24px;
+  }
+
+  .index-how-it-works-step-list p {
+    display: block;
+    block-size: 100%;
+  }
+
+  .index-how-it-works-step-list img {
+    display: block;
+    margin: 0 auto;
+    border-radius: 180px;
+    max-height: 80%;
+  }
+
+  /* OUR SERVICES SECTION */
+  .index-services {
+    width: 100%;
+    height: 100%;
+    padding: 24px 0;
+  }
+
+  .index-services-h2-full {
+    display: none;
+  }
+
+  .index-services-h2-short {
+    display: inline;
+    text-align: center;
+    color: var(--site-color-06);
+  }
+
+  .index-services-plan {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-top: 16px;
+  }
+
+  .index-services-plan p {
+    display: block;
+    justify-self: center;
+    width: 80%;
+    text-align: center;
+  }
+
+  .index-services-plan li {
+    flex-basis: 100%;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 2.0;
+  }
+
+  .index-services-plan-1 {
+    padding: 0;
+    border-left: none;
+    border-right: none;
+    border-bottom: 4px solid var(--site-color-01);
+  }
+
+  .index-services-plan-2 {
+    padding: 0;
+    padding-top: 24px;
+    border-left: none;
+    border-right: none;
+    border-bottom: 4px solid var(--site-color-01);
+  }
+
+  .index-services-plan-3 {
+    padding: 0;
+    padding-top: 24px;
+    border-left: none;
+    border-right: none;
+    border-bottom: 4px solid var(--site-color-01);
+  }
+
+  .index-services-plan-1-items,
+  .index-services-plan-2-items,
+  .index-services-plan-3-items {
+    display: block;
+    justify-self: center;
+    padding-bottom: 24px;
+  }
+
+  .cta-btn-index-services {
+    display: none;
+  }
+
+  .cta-btn-index-services-plan-1,
+  .cta-btn-index-services-plan-2,
+  .cta-btn-index-services-plan-3 {
+    display: flex;
+    margin: 0 auto;
+    margin-top: 24px;
+    margin-bottom: 36px;
   }
 
   .index-services-note {
