--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,5 @@
+/* MEDIA >= 1200px */
+
 /* MAIN SECTION */
 main {
   width: 100%;
@@ -16,6 +18,9 @@ main {
 .index-main-text {
   display: flex;
   flex-direction: column;
+  border-left: 4px solid var(--site-color-01);
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
 }
 
 .index-main-text-slogan {
@@ -24,14 +29,14 @@ main {
   color: #fff;
   font-family: Montserrat, Arial, Helvetica, sans-serif;
   font-weight: 900;
-  border-left: 4px solid var(--site-color-01);
-  border-top-left-radius: 4px;
   padding-left: 12px;
 }
 
+.index-main-text-slogan-tall {
+  display: none;
+}
+
 .index-main-text-title {
-  border-left: 4px solid var(--site-color-01);
-  border-bottom-left-radius: 4px;
   padding-left: 14px;
 }
 
@@ -97,16 +102,15 @@ main {
   text-align: center;
 }
 
-.index-how-it-works-step-list {
+.index-how-it-works ol {
   display: flex;
-  height: 600px;
   flex-direction: row;
   justify-content: center;
   padding-top: 36px;
 }
 
-.index-how-it-works-step-list li {
-  flex-basis: 33.3%;
+.index-how-it-works li {
+  flex-basis: 33.33%;
 }
 
 .index-how-it-works-step-list-1 {
@@ -127,16 +131,18 @@ main {
   border-right: 4px solid var(--site-color-04);
 }
 
-.index-how-it-works-step-list p {
+.index-how-it-works p {
   display: block;
-  block-size: 320px;
+  text-align: center;
+  width: 80%;
+  margin: 0 auto;
+  block-size: 250px;
   color: var(--site-color-06);
   font-weight: 400;
-  padding-top: 16px;
-  padding-bottom: 16px;
+  padding: 16px 0;
 }
 
-.index-how-it-works-step-list img {
+.index-how-it-works img {
   display: block;
   margin: 0 auto;
   border-radius: 180px;
@@ -149,6 +155,13 @@ main {
   height: calc(100vh - 60px);
   padding: 60px 0;
   background-color: var(--site-color-04);
+}
+
+.index-services-flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 .index-services-h2-full {
@@ -165,13 +178,6 @@ main {
   line-height: 1.4;
 }
 
-.index-services-flex {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-}
-
 .index-services-plan {
   display: flex;
   flex-direction: row;
@@ -179,7 +185,7 @@ main {
   padding-top: 36px;
 }
 
-.index-services-plan p {
+.index-services-plan-description {
   display: block;
   block-size: 72px;
   align-content: center;
@@ -187,28 +193,40 @@ main {
 }
 
 .index-services-plan li {
-  flex-basis: 33.3%;
   font-weight: 500;
   font-size: 20px;
-  line-height: 2.0;
+  line-height: 1.8;
 }
 
 .index-services-plan-1 {
+  width: 33.33%;
   padding: 0 20px 0 20px;
   border-left: 4px solid var(--site-color-01);
   border-right: 2px solid var(--site-color-01);
 }
 
 .index-services-plan-2 {
+  width: 33.33%;
   padding: 0 20px 0 20px;
   border-left: 2px solid var(--site-color-01);
   border-right: 2px solid var(--site-color-01);
 }
 
 .index-services-plan-3 {
+  width: 33.33%;
   padding: 0 20px 0 20px;
   border-left: 2px solid var(--site-color-01);
   border-right: 4px solid var(--site-color-01);
+}
+
+.index-services-price {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2.4rem;
+  font-weight: 600;
+  color: var(--site-color-06);
+  padding-top: 12px;
 }
 
 .cta-btn-index-services-plan-1,
@@ -260,8 +278,16 @@ main {
   }
 
   .index-main-text-slogan {
+    display: none;
+  }
+
+  .index-main-text-slogan-tall {
+    display: inline;
     font-size: 4.8rem;
     line-height: 0.85;
+    color: #fff;
+    font-family: Montserrat, Arial, Helvetica, sans-serif;
+    font-weight: 900;
     margin-left: 0px;
     padding-left: 8px;
   }
@@ -276,6 +302,8 @@ main {
   /* OUR MISSION SECTION */
   .index-our-mission {
     width: 100%;
+    height: 100%;
+    padding: 30px 0;
   }
 
   .index-our-mission-flex {
@@ -310,19 +338,15 @@ main {
   .index-how-it-works {
     width: 100%;
     height: 100%;
-    padding: 24px 0;
+    padding: 30px 0;
   }
 
-  .index-how-it-works-step-list {
-    height: 100%;
-    padding-top: 36px;
-    display: flex;
+  .index-how-it-works ol {
     flex-direction: column;
-    justify-content: center;
     align-items: center;
   }
 
-  .index-how-it-works-step-list li {
+  .index-how-it-works li {
     flex-basis: 100%;
   }
 
@@ -331,30 +355,29 @@ main {
     border-left: none;
     border-right: none;
     padding-bottom: 60px;
+    width: 100%;
   }
-
+  
   .index-how-it-works-step-list-2 {
     padding: 0;
     border-left: none;
     border-right: none;
     padding-bottom: 60px;
+    width: 100%;
   }
 
   .index-how-it-works-step-list-3 {
     padding: 0;
     border-left: none;
     border-right: none;
+    width: 100%;
   }
 
-  .index-how-it-works-step-list p {
-    display: block;
+  .index-how-it-works p {
     block-size: 100%;
   }
 
-  .index-how-it-works-step-list img {
-    display: block;
-    margin: 0 auto;
-    border-radius: 180px;
+  .index-how-it-works img {
     max-height: 80%;
   }
 
@@ -362,7 +385,7 @@ main {
   .index-services {
     width: 100%;
     height: 100%;
-    padding: 24px 0;
+    padding: 30px 0;
   }
 
   .index-services-h2-full {
@@ -380,29 +403,40 @@ main {
     flex-direction: column;
     justify-content: center;
     padding-top: 16px;
+    flex-basis: 100%;
   }
 
-  .index-services-plan p {
+  .index-services-plan-description {
     display: block;
     justify-self: center;
     block-size: 100px;
+    text-align: center;
+  }
+
+  .index-services-plan ul {
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    margin: 0 auto;
   }
 
   .index-services-plan li {
     flex-basis: 100%;
     font-weight: 500;
-    font-size: 16px;
+    font-size: 1.6rem;
     line-height: 2.0;
   }
 
   .index-services-plan-1 {
-    padding: 0;
+    width: 100%;
+    padding: 0px;
     border-left: none;
     border-right: none;
     border-bottom: 4px solid var(--site-color-01);
   }
 
   .index-services-plan-2 {
+    width: 100%;
     padding: 0;
     padding-top: 24px;
     border-left: none;
@@ -411,6 +445,7 @@ main {
   }
 
   .index-services-plan-3 {
+    width: 100%;
     padding: 0;
     padding-top: 24px;
     border-left: none;
@@ -418,11 +453,22 @@ main {
     border-bottom: 4px solid var(--site-color-01);
   }
 
-  .index-services-plan-1-items,
-  .index-services-plan-2-items,
-  .index-services-plan-3-items {
-    display: block;
+  .index-services-plan-1-ul,
+  .index-services-plan-2-ul,
+  .index-services-plan-3-ul {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
     justify-self: center;
+  }
+
+  .index-services-price {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2.0rem;
+    font-weight: 600;
+    color: var(--site-color-06);
   }
 
   .cta-btn-index-services {
@@ -444,8 +490,7 @@ main {
 
   /* FAQ SECTION */
   .index-faq {
-    padding-top: 24px;
-    padding-bottom: 0;
+    padding: 30px 0;
   }
 
   .index-faq h2 {
@@ -458,15 +503,23 @@ main {
 
 
 /* LARGER PHONES OR SMALL TABLETS (PORTRAIT) */
-@media only screen and (min-width: 601px) and (max-width: 768px) {
+@media only screen and (min-width: 601px) and (max-width: 768px) and (orientation: portrait) {
 
   /* MAIN SECTION */
   .index-main-text {
-    margin-bottom: 60px;
+    margin-bottom: 20%;
   }
 
   .index-main-text-slogan {
-    font-size: 8.4rem;
+    display: none;
+  }
+
+  .index-main-text-slogan-tall {
+    display: inline;
+    font-size: 7.8rem;
+    font-family: Montserrat, Arial, Helvetica, sans-serif;
+    font-weight: 900;
+    color: #fff;
     line-height: 0.85;
     margin-left: 0px;
     padding-left: 8px;
@@ -516,19 +569,15 @@ main {
   .index-how-it-works {
     width: 100%;
     height: 100%;
-    padding: 24px 0;
+    padding: 30px 0;
   }
 
-  .index-how-it-works-step-list {
-    height: 100%;
-    padding-top: 36px;
-    display: flex;
+  .index-how-it-works ol {
     flex-direction: column;
-    justify-content: center;
     align-items: center;
   }
 
-  .index-how-it-works-step-list li {
+  .index-how-it-works li {
     flex-basis: 100%;
   }
 
@@ -537,31 +586,29 @@ main {
     border-left: none;
     border-right: none;
     padding-bottom: 60px;
+    width: 100%;
   }
-
+  
   .index-how-it-works-step-list-2 {
     padding: 0;
     border-left: none;
     border-right: none;
     padding-bottom: 60px;
+    width: 100%;
   }
 
   .index-how-it-works-step-list-3 {
     padding: 0;
     border-left: none;
     border-right: none;
-    padding-bottom: 24px;
+    width: 100%;
   }
 
-  .index-how-it-works-step-list p {
-    display: block;
+  .index-how-it-works p {
     block-size: 100%;
   }
 
-  .index-how-it-works-step-list img {
-    display: block;
-    margin: 0 auto;
-    border-radius: 180px;
+  .index-how-it-works img {
     max-height: 80%;
   }
 
@@ -569,7 +616,7 @@ main {
   .index-services {
     width: 100%;
     height: 100%;
-    padding: 24px 0;
+    padding: 60px 0;
   }
 
   .index-services-h2-full {
@@ -587,30 +634,45 @@ main {
     flex-direction: column;
     justify-content: center;
     padding-top: 16px;
+    flex-basis: 100%;
   }
 
-  .index-services-plan p {
-    display: block;
-    justify-self: center;
-    width: 80%;
+  .index-services-plan-description {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
+    width: 50%;
+    padding: 48px 0;
+    margin: 0 auto;
+  }
+
+  .index-services-plan ul {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    margin: 0 auto;
   }
 
   .index-services-plan li {
     flex-basis: 100%;
     font-weight: 500;
-    font-size: 16px;
+    font-size: 1.6rem;
     line-height: 2.0;
   }
 
   .index-services-plan-1 {
-    padding: 0;
+    border-top: 4px solid var(--site-color-01);
+    width: 100%;
+    padding: 0px;
+    padding-top: 24px;
     border-left: none;
     border-right: none;
     border-bottom: 4px solid var(--site-color-01);
   }
 
   .index-services-plan-2 {
+    width: 100%;
     padding: 0;
     padding-top: 24px;
     border-left: none;
@@ -619,6 +681,7 @@ main {
   }
 
   .index-services-plan-3 {
+    width: 100%;
     padding: 0;
     padding-top: 24px;
     border-left: none;
@@ -626,12 +689,22 @@ main {
     border-bottom: 4px solid var(--site-color-01);
   }
 
-  .index-services-plan-1-items,
-  .index-services-plan-2-items,
-  .index-services-plan-3-items {
-    display: block;
+  .index-services-plan-1-ul,
+  .index-services-plan-2-ul,
+  .index-services-plan-3-ul {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
     justify-self: center;
-    padding-bottom: 24px;
+  }
+
+  .index-services-price {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2.0rem;
+    font-weight: 600;
+    color: var(--site-color-06);
   }
 
   .cta-btn-index-services {
@@ -643,8 +716,8 @@ main {
   .cta-btn-index-services-plan-3 {
     display: flex;
     margin: 0 auto;
-    margin-top: 24px;
-    margin-bottom: 36px;
+    margin-top: 16px;
+    margin-bottom: 24px;
   }
 
   .index-services-note {
@@ -653,8 +726,7 @@ main {
 
   /* FAQ SECTION */
   .index-faq {
-    padding-top: 24px;
-    padding-bottom: 0;
+    padding: 60px 0;
   }
 
   .index-faq h2 {
