--- a/css/main.css
+++ b/css/main.css
@@ -305,7 +305,7 @@ Social Media Icons
 /* <600px, 601px, 768px, 992px, 1200px */
 
 /* MOBILE PHONES (PORTRAIT) */
-@media only screen and (max-width: 600px) or (orientation: landscape) {
+@media only screen and (max-width: 600px) {
   /*
   *, *::before, *::after {
     box-sizing: border-box;
