--- a/css/index.css
+++ b/css/index.css
@@ -26,7 +26,7 @@ main {
 .index-main-text-slogan {
   font-size: 9.6rem;
   line-height: 0.85;
-  color: #fff;
+  color: var(--site-color-06);
   font-family: Montserrat, Arial, Helvetica, sans-serif;
   font-weight: 900;
   padding-left: 12px;
@@ -55,14 +55,14 @@ main {
 }
 
 .index-our-mission-img {
+  display: block;
   margin-left: auto;
-  background-color: aquamarine;
 }
 
 .index-our-mission-img img {
   display: block;
-  border: 4px solid var(--site-color-01);
   width: 80%;
+  border: 4px solid var(--site-color-01);
   border-radius: 360px;
   margin: 0 auto;
 }
@@ -71,7 +71,6 @@ main {
   display: block;
   margin-left: auto;
   width: 600px;
-  background-color: tomato;
 }
 
 .index-our-mission-text p {
@@ -210,7 +209,7 @@ main {
 
 .index-services-plan li {
   font-weight: 500;
-  font-size: 20px;
+  font-size: 2.0rem;
   line-height: 1.8;
 }
 
@@ -318,7 +317,6 @@ main {
 
   /* OUR MISSION SECTION */
   .index-our-mission {
-    width: 100%;
     height: 100%;
     padding: 30px 0;
   }
@@ -329,13 +327,11 @@ main {
   }
 
   .index-our-mission-img {
-    display: block;
     width: 75%;
     margin: 0 auto;
   }
 
   .index-our-mission-img img {
-    display: block;
     width: 100%;
     max-width: 250px;
     padding: 0;
@@ -344,8 +340,6 @@ main {
   
   .index-our-mission-text {
     max-width: 100%;
-    padding-left: 0px;
-    padding-right: 0px;
   }
 
   .index-our-mission-text h2 {
@@ -354,7 +348,6 @@ main {
 
   /* HOW IT WORKS SECTION */
   .index-how-it-works {
-    width: 100%;
     height: 100%;
     padding: 30px 0;
   }
@@ -401,7 +394,6 @@ main {
 
   /* OUR SERVICES SECTION */
   .index-services {
-    width: 100%;
     height: 100%;
     padding: 30px 0;
   }
@@ -504,14 +496,9 @@ main {
 @media only screen and (max-height: 500px) and (orientation: landscape) {
 
   /* MAIN SECTION */
-  .index-main-text {
-    margin-bottom: 0px;
-  }
-
   .index-main-text-slogan {
     display: inline;
     font-size: 4.8rem;
-    margin-left: 0px;
     padding-left: 8px;
   }
 
@@ -521,7 +508,6 @@ main {
   
   .index-main-text-title {
     font-size: 2.4rem;
-    margin-left: 0px;
     padding-left: 8px;
   }
 
@@ -532,36 +518,24 @@ main {
   }
 
   .index-our-mission-flex {
-    display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    column-gap: 0px;
   }
 
   .index-our-mission-img {
-    display: block;
     width: 50%;
   }
 
   .index-our-mission-img img {
-    display: block;
     width: 100%;
     max-width: 250px;
-    padding: 0;
-    margin: 0 auto;
   }
 
   .index-our-mission-text {
     max-width: 50%;
-    padding-left: 0px;
-    padding-right: 0px;
   }
 
   /* HOW IT WORKS SECTION */
   .index-how-it-works {
-    width: 100%;
     height: 100%;
     padding: 30px 0;
   }
@@ -575,27 +549,17 @@ main {
     flex-basis: 100%;
   }
 
-  .index-how-it-works-step-list-1 {
-    padding: 0;
+  .index-how-it-works-step-list-1,
+  .index-how-it-works-step-list-2,
+  .index-how-it-works-step-list-3 {
+    padding: 0 0 60px 0;
     border-left: none;
     border-right: none;
-    padding-bottom: 60px;
-    width: 100%;
-  }
-  
-  .index-how-it-works-step-list-2 {
-    padding: 0;
-    border-left: none;
-    border-right: none;
-    padding-bottom: 60px;
     width: 100%;
   }
 
   .index-how-it-works-step-list-3 {
-    padding: 0;
-    border-left: none;
-    border-right: none;
-    width: 100%;
+    padding: 0 0 0 0;
   }
 
   .index-how-it-works p {
@@ -608,7 +572,6 @@ main {
 
   /* OUR SERVICES SECTION */
   .index-services {
-    width: 100%;
     height: 100%;
     padding: 30px 0;
   }
@@ -624,9 +587,7 @@ main {
   }
 
   .index-services-plan {
-    display: flex;
     flex-direction: column;
-    justify-content: center;
     padding-top: 16px;
     flex-basis: 100%;
   }
@@ -640,7 +601,6 @@ main {
     flex-wrap: wrap;
     flex-direction: column;
     justify-self: center;
-    padding-left: 10%;
     width: 80%;
     max-height: 200px;
   }
@@ -650,7 +610,6 @@ main {
     align-self: start;
     justify-content: center;
     flex-basis: 100%;
-    font-weight: 500;
     font-size: 1.6rem;
     line-height: 2.0;
   }
@@ -671,12 +630,7 @@ main {
   }
 
   .index-services-price {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     font-size: 2.0rem;
-    font-weight: 600;
-    color: var(--site-color-06);
     padding-top: 0px;
   }
 
@@ -690,11 +644,11 @@ main {
     display: flex;
     margin: 0 auto;
     margin-top: 16px;
-    margin-bottom: 24px;
+    margin-bottom: 16px;
   }
 
   .index-services-note {
-    padding-top: 24px;
+    padding-top: 30px;
   }
 
   /* FAQ SECTION */
@@ -725,44 +679,34 @@ main {
 
   .index-main-text-slogan-tall {
     display: inline;
-    font-size: 7.8rem;
+    font-size: 7.2rem;
     font-family: Montserrat, Arial, Helvetica, sans-serif;
     font-weight: 900;
-    color: #fff;
     line-height: 0.85;
-    margin-left: 0px;
+    color: var(--site-color-06);
     padding-left: 8px;
   }
   
   .index-main-text-title {
     font-size: 3.6rem;
     line-height: 1.0;
-    margin-left: 0px;
     padding-left: 8px;
   }
 
   /* OUR MISSION SECTION */
-  .index-our-mission {
-    width: 100%;
-  }
-
   .index-our-mission-flex {
     flex-direction: column;
     row-gap: 20px;
   }
 
   .index-our-mission-img {
-    display: block;
     width: 75%;
     margin: 0 auto;
   }
 
   .index-our-mission-img img {
-    display: block;
     width: 100%;
     max-width: 250px;
-    padding: 0;
-    margin: 0 auto;
   }
   
   .index-our-mission-text {
@@ -777,9 +721,7 @@ main {
 
   /* HOW IT WORKS SECTION */
   .index-how-it-works {
-    width: 100%;
     height: 100%;
-    padding: 30px 0;
   }
 
   .index-how-it-works ol {
@@ -816,6 +758,8 @@ main {
 
   .index-how-it-works p {
     block-size: 100%;
+    width: 70%;
+    text-align: center;
   }
 
   .index-how-it-works img {
@@ -824,9 +768,7 @@ main {
 
   /* OUR SERVICES SECTION */
   .index-services {
-    width: 100%;
     height: 100%;
-    padding: 60px 0;
   }
 
   .index-services-h2-full {
@@ -866,7 +808,6 @@ main {
 
   .index-services-plan li {
     flex-basis: 100%;
-    font-weight: 500;
     font-size: 1.6rem;
     line-height: 2.0;
   }
@@ -887,12 +828,7 @@ main {
   }
 
   .index-services-price {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     font-size: 2.0rem;
-    font-weight: 600;
-    color: var(--site-color-06);
   }
 
   .cta-btn-index-services {
@@ -904,19 +840,15 @@ main {
   .cta-btn-index-services-plan-3 {
     display: flex;
     margin: 0 auto;
-    margin-top: 16px;
-    margin-bottom: 24px;
+    margin-top: 20px;
+    margin-bottom: 20px;
   }
 
   .index-services-note {
-    padding-top: 24px;
+    padding-top: 60px;
   }
 
   /* FAQ SECTION */
-  .index-faq {
-    padding: 60px 0;
-  }
-
   .index-faq h2 {
     padding-bottom: 24px;
     margin: 0 auto;
@@ -937,17 +869,19 @@ main {
   .index-main-text-slogan {
     display: inline;
     font-size: 7.2rem;
-    padding-left: 12px;
   }
 
   .index-main-text-slogan-tall {
     display: none;
   }
 
+  .index-main-text-title {
+    font-size: 3.6rem;
+  }
+
   /* OUR MISSION SECTION */
   .index-our-mission-flex {
     flex-direction: row;
-    column-gap: 0px;
   }
 
   .index-our-mission-img {
@@ -962,8 +896,6 @@ main {
 
   .index-our-mission-text {
     max-width: 50%;
-    padding-left: 0px;
-    padding-right: 0px;
   }
 
   /* HOW IT WORKS SECTION */
@@ -975,14 +907,6 @@ main {
     display: flex;
     justify-content: center;
     height: 84px;
-  }
-
-  .index-how-it-works p {
-    display: flex;
-    text-align: left;
-    width: 100%;
-    margin: 0 auto;
-    block-size: 250px;
   }
 
   .index-how-it-works img {
@@ -1008,7 +932,6 @@ main {
   /* OUR MISSION SECTION */
   .index-our-mission-flex {
     flex-direction: row;
-    column-gap: 0px;
   }
 
   .index-our-mission-img {
