--- a/css/index.css
+++ b/css/index.css
@@ -95,7 +95,7 @@ main {
 /* HOW IT WORKS SECTION */
 .index-how-it-works {
   width: 100%;
-  height: calc(100vh - 60px);
+  height: 100%;
   padding: 60px 0;
   background-color: var(--site-color-01);
 }
@@ -167,7 +167,7 @@ main {
 /* OUR SERVICES SECTION */
 .index-services {
   width: 100%;
-  height: calc(100vh - 60px);
+  height: 100%;
   padding: 60px 0;
   background-color: var(--site-color-04);
 }
