--- a/css/index.css
+++ b/css/index.css
@@ -283,6 +283,43 @@ main {
   opacity: 0.8;
 }
 
+/* TESTIMONIALS SECTION */
+.index-testimonials {
+  width: 100%;
+  padding-top: 60px;
+  background-color: var(--site-color-04);
+}
+
+.index-testimonials-h2 {
+  display: none;
+}
+
+.index-testimonials-flex {
+  display: flex;
+  justify-content: center;
+}
+
+.testimonial {
+  flex-basis: 20%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.testimonial img {
+  width: 100px;
+  height: 100px;
+  border: 3px solid var(--site-color-01);
+  border-radius: 100%;
+  object-fit: cover;
+}
+
+.testimonial p {
+  text-align: center;
+  padding: 20px;
+}
 
 
 /* MOBILE PHONES (PORTRAIT) */
@@ -475,6 +512,26 @@ main {
   .index-faq h2 {
     padding-bottom: 24px;
     margin: 0 auto;
+  }
+
+  /* TESTIMONIALS SECTION */
+  .index-testimonials {
+    padding: 30px 0;
+  }
+  
+  .index-testimonials-flex {
+    flex-direction: column;
+  }
+  
+  .index-testimonials-h2 {
+    display: inline;
+    text-align: center;
+    padding-bottom: 24px;
+  }
+
+  .testimonial:nth-child(4),
+  .testimonial:nth-child(5) {
+    display: none;
   }
 
 }
@@ -842,6 +899,26 @@ main {
     margin: 0 auto;
   }
 
+  /* TESTIMONIALS SECTION */
+  .index-testimonials {
+    padding: 30px 0;
+  }
+  
+  .index-testimonials-flex {
+    flex-direction: column;
+  }
+  
+  .index-testimonials-h2 {
+    display: inline;
+    text-align: center;
+    padding-bottom: 24px;
+  }
+
+  .testimonial:nth-child(4),
+  .testimonial:nth-child(5) {
+    display: none;
+  }
+
 }
 
 
@@ -908,6 +985,25 @@ main {
 
   .index-services-plan-description {
     block-size: 150px;
+  }
+
+  /* TESTIMONIALS SECTION */
+  .index-testimonials {
+    padding: 60px 0;
+  }
+
+  .testimonial {
+    flex-basis: 33.33%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+
+  .testimonial:nth-child(4),
+  .testimonial:nth-child(5) {
+    display: none;
   }
 
 }
