--- a/css/index.css
+++ b/css/index.css
@@ -24,8 +24,8 @@ main {
 }
 
 .index-main-text-slogan {
-  font-size: 9.6rem;
-  line-height: 0.85;
+  font-size: 8.0rem;
+  line-height: 0.9;
   color: var(--site-color-06);
   font-family: Montserrat, Arial, Helvetica, sans-serif;
   font-weight: 900;
@@ -336,8 +336,8 @@ main {
 
   .index-main-text-slogan-tall {
     display: inline;
-    font-size: 4.8rem;
-    line-height: 0.85;
+    font-size: 3.6rem;
+    line-height: 0.9;
     color: #fff;
     font-family: Montserrat, Arial, Helvetica, sans-serif;
     font-weight: 900;
@@ -346,8 +346,6 @@ main {
   }
   
   .index-main-text-title {
-    font-size: 2.4rem;
-    line-height: 1.0;
     margin-left: 0px;
     padding-left: 8px;
   }
@@ -539,12 +537,13 @@ main {
 
 
 /* MOBILE PHONES (LANDSCAPE) */
-@media only screen and (max-height: 500px) and (orientation: landscape) {
+@media only screen and (max-height: 480px) and (orientation: landscape) {
 
   /* MAIN SECTION */
   .index-main-text-slogan {
     display: inline;
-    font-size: 4.8rem;
+    font-size: 3.6rem;
+    line-height: 0.9;
     padding-left: 8px;
   }
 
@@ -724,10 +723,10 @@ main {
 
   .index-main-text-slogan-tall {
     display: inline;
-    font-size: 7.2rem;
+    font-size: 4.8rem;
     font-family: Montserrat, Arial, Helvetica, sans-serif;
     font-weight: 900;
-    line-height: 0.85;
+    line-height: 0.9;
     color: var(--site-color-06);
     padding-left: 8px;
   }
@@ -933,7 +932,8 @@ main {
 
   .index-main-text-slogan {
     display: inline;
-    font-size: 7.2rem;
+    font-size: 4.8rem;
+    line-height: 0.9;
   }
 
   .index-main-text-slogan-tall {
@@ -1010,8 +1010,27 @@ main {
 
 
 
-/* STANDARD LAPTOPS AND DESKTOPS */
+/* STANDARD LAPTOPS */
 @media only screen and (min-width: 993px) and (max-width: 1200px) {
+  
+  /* MAIN SECTION */
+  .index-main-text {
+    margin-bottom: 20%;
+  }
+
+  .index-main-text-slogan {
+    display: inline;
+    font-size: 6.0rem;
+    line-height: 0.9;
+  }
+
+  .index-main-text-slogan-tall {
+    display: none;
+  }
+
+  .index-main-text-title {
+    font-size: 4.8rem;
+  }
 
   /* OUR MISSION SECTION */
   .index-our-mission-flex {
